# TestWorkMaps

./: CMakeLists.txt  Point.qml  PolygoneCore.cpp  PolygoneCore.h  README.md  main.cpp  main.qml  qml.qrc
